--- a/DevToys/DevToys/Resource/de.lproj/Localizable.strings
+++ b/DevToys/DevToys/Resource/de.lproj/Localizable.strings
@@ -72,6 +72,10 @@
 "ISO 8601" = "ISO 8601";
 "Calender" = "Kalender";
 
+"tool.deeplink.title" = "Deeplink Converter";
+"tool.deeplink.mintitle" = "Deeplink";
+"tool.deeplink.description" = "Convert Deeplink";
+
 "tool.html.title" = "HTML Encoder / Decoder";
 "tool.html.mintitle" = "HTML";
 "tool.html.description" = "Kodiert oder dekodiert alle zutreffenden Zeichen in ihr entsprechendes HTML";
